# soscan

./: LICENSE  README.adoc  README.md  pyproject.toml
soscan/: scrapy.cfg
soscan/soscan/: items.py  middlewares.py  models.py  pipelines.py  settings.py  utils.py
soscan/soscan/spiders/: jsonldspider.py  ldsitemapspider.py
tests/: test_normalize.py
