[tool.poetry]
name = "soscan"
version = "0.1.0"
description = "Spider for crawling schema.org resources"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.1"
numpy = {version = ">=1.19.2", optional=true}
jupyter = {version = ">=1.0.0", optional=true}
jupyterlab = {version = ">=2.2.8", optional=true}
sphinx = {version = ">=3.2.1", optional=true }
jupyter-sphinx = {version = "^0.3.1", optional=true }
myst-nb = {version = "^0.10.1", optional=true }
sphinxcontrib-bibtex = {version = "^1.0.0", optional=true }
sphinx-tabs = {version = "^1.3.0", optional=true }
sphinx-thebe = {version = "^0.0.7", optional=true }
graphviz = {version = "^0.14.1", optional=true }
sphinxcontrib-needs = {version = "^0.5.6", optional=true }
sphinxcontrib-plantuml = {version = "^0.18.1", optional=true }
sphinx_issues = {version = "^1.2.0", optional=true }
sphinx-autobuild = {version = "^2020.9.1", optional=true }
nbsphinx = {version = ">=0.8.0", optional=true }
sphinx-material = {git = "https://github.com/bashtage/sphinx-material.git", optional=true }
pandoc = {version = "^1.0.2", optional=true }
"sphinxcontrib.plantuml" = {version = "^0.18.1", optional=true}
Scrapy = "^2.4.0"
SQLAlchemy = "^1.3.20"
psycopg2 = "^2.8.6"
pyld = {git = "https://github.com/datadavev/pyld.git", rev = "issue_128"}
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
jsonschema = "^3.2.0"

[tool.poetry.extras]
docs = [
    "numpy",
    "sphinx",
    "graphviz",
    "pandoc",
    "sphinx-material",
    "sphinxcontrib-bibtex",
    "sphinx-tabs",
    "sphinxcontrib-needs",
    "sphinxcontrib-plantuml",
    "sphinx_issues",
    "sphinx-autobuild",
    "jupyter",
    "jupyterlab",
    "jupyter-sphinx",
    "nbsphinx",
    "myst-nb",
    "sphinx-thebe",
    "pandas",
    "plotnine",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
